# film-network-ui/src/app/services/models.ts
@@ -2,8 +2,6 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export { AuthenticateRequest } from './models/authenticate-request';
-export { AuthenticationResponse } from './models/authentication-response';
 export { FilmFeedbackRequest } from './models/film-feedback-request';
 export { FilmFeedbackResponse } from './models/film-feedback-response';
 export { FilmRentalHistoryRequest } from './models/film-rental-history-request';
@@ -13,5 +11,4 @@ export { FilmResponse } from './models/film-response';
 export { PageResponseFilmFeedbackResponse } from './models/page-response-film-feedback-response';
 export { PageResponseFilmResponse } from './models/page-response-film-response';
 export { PageResponseRentedFilmResponse } from './models/page-response-rented-film-response';
-export { RegistrationRequest } from './models/registration-request';
 export { RentedFilmResponse } from './models/rented-film-response';
