# film-network-ui/src/app/services/models/authenticate-request.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface AuthenticateRequest {
-  email: string;
-  password: string;
-}
