# film-network-ui/src/app/services/models/authentication-response.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface AuthenticationResponse {
-  id?: number;
-  token?: string;
-}
